feat: type inference and build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,7 @@
       "dom"
   ],
   },
-  "include": ["src/demo.ts"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["src/**/*.spec.ts", "src/examples/*.ts"]
+
 }
