--- a/package.json
+++ b/package.json
@@ -1,26 +1,41 @@
 {
-  "name": "tiny-schemav",
-  "version": "1.0.0",
+  "name": "tsv",
+  "version": "0.0.1",
   "description": "A tiny schema validator",
-  "main": "index.js",
-  "scripts": {
-    "test": "vitest",
-    "coverage": "vitest run --coverage",
-    "demo": "nodemon src/demo.ts"
+  "files": [
+    "dist"
+  ],
+  "types": "dist/index.d.ts",
+  "main": "dist/tsv.umd.js",
+  "module": "dist/tsv.mjs",
+  "exports": {
+    ".": {
+      "import": "./dist/tsv.mjs",
+      "require": "./dist/tsv.umd.js"
+    }
   },
-  "keywords": [],
+  "scripts": {
+    "build": "rm -rf dist/ && tsc --noEmit && vite build",
+    "prepublish": "npm run build",
+    "test": "vitest",
+    "coverage": "vitest --coverage",
+    "lint": "eslint \"./src/**/*.ts\""
+  },
+  "keywords": [
+    "JSON",
+    "schema",
+    "validator",
+    "validation"
+  ],
   "author": "ziggornif <ziggornif@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "@swc-node/register": "^1.6.6",
-    "@swc/core": "^1.3.68",
-    "@swc/jest": "^0.2.26",
-    "@tsconfig/node20": "^20.1.4",
-    "@vitest/coverage-v8": "^1.5.0",
-    "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
+    "@tsconfig/node20": "20.1.4",
+    "@vitest/coverage-v8": "^1.5.2",
     "typescript": "^5.4.5",
-    "vitest": "^1.5.0"
+    "vite": "^5.2.10",
+    "vite-plugin-dts": "^3.9.0",
+    "vitest": "^1.5.2"
   },
   "dependencies": {
     "typescript-json-schema": "^0.63.0"
