--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,12 @@
   "compilerOptions": {
     "module": "commonjs",
     "moduleResolution": "Node",
+    "forceConsistentCasingInFileNames": true,
     "outDir": "dist",
     "baseUrl": "./",
     "noImplicitAny": false,
     "lib": [
-      "es6",
+      "ES2016",
       "dom"
   ],
   },
