--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
   ],
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["src/**/*.spec.ts", "src/examples/*.ts"]
+  "exclude": ["src/**/*.spec.ts"]
 
 }
